[gd_scene load_steps=5 format=3 uid="uid://dwuhbaedngkvi"]

[ext_resource type="Script" path="res://scenes/lily_sex_dungeon.gd" id="1_611j5"]
[ext_resource type="Texture2D" uid="uid://dl8u2hk4yiw3a" path="res://assets/img/vesper_face.png" id="1_t6wcy"]
[ext_resource type="PackedScene" uid="uid://728fnim4yyl8" path="res://scenes/dialogue_label.tscn" id="2_5g7di"]
[ext_resource type="Texture2D" uid="uid://cberx63720yco" path="res://assets/img/bondage_dungeon.jpg" id="2_vweic"]

[node name="LilySexDungeon" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_611j5")

[node name="SceneBg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_vweic")

[node name="DialogBox" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 223.0
offset_top = -338.0
offset_right = -219.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0

[node name="CharPortrait" type="TextureRect" parent="DialogBox"]
visible = false
layout_mode = 0
offset_left = -178.0
offset_top = -79.0
offset_right = 166.0
offset_bottom = 303.0
texture = ExtResource("1_t6wcy")
expand_mode = 1

[node name="DialogueLabel" parent="DialogBox" instance=ExtResource("2_5g7di")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 148.0
offset_top = 21.0
offset_right = -55.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 40
text = "Type here"
messages = Array[String](["Lily hands you a collar choker and grabs the leash.", "The moment you said you wanted to become her pet it's as if she no longers see you as a person.", "Lily: Go on, put it on. Do as your master tells you to.", "You do as you're told.", "Lily: You're mine now. Forever.", "Lily: I pity you. I hope you haven't chosen this thinking you may overpower me with your vampiric skills?", "Vesper: No, I…", "Lily: Go on, try to protrude those fangs of yours. Don’t be shy.", "You try to protrude your fangs. If anything it’s been hard to contain them inside your mouth, not the opposite.", "However, they just won’t come out.", "Lily: Feels bad, doesn’t it? I'm afraid your powers don't work here.", "Lily: Here in this store you’re as powerless as any human. This is my domain. ", "Lily: My wards may not have repelled you, but they still make you as insignificant as a fly, that I could crush at any minute. ", "Lily: Are you afraid? You should be. If you have mistaken me for someone with mercy.", "That, has been ripped away from me centuries ago.", " I see you as a living toy, that I can use and abuse anyway I see fit.", "Lily: Go on, try to run away. I dare you.", "Vesper: Even if I wanted to, I don’t think I could escape you.", "Lily: Very good, my new pet. I’m beginning to like you, don’t make me regret it.", "Lily: Come, let’s have your first lesson in pleasing me.", "She pulls you by leash and takes you downstairs to the basement..", "If there was a picture in the dictionary depicting a sex dungeon, this would fit perfectly in it.", "There are things in this place you can’t even imagine how they would work.", "Lily: What do you think about my little collection? I’ve spent decades gathering these. ", "She looks very excited talking about her collection.", "Lily: They aren’t as easy to find anymore, and I’ve had to move so many times over the past centuries, I always have to start a new one.", "Lily: Pity, some of my old things must be on display in museums, oh how I miss some of my toys. ", "Vesper: I don’t know what to say.", "Lily: I'm getting wet just thinking about all the things I'm going to do to you.", "Lily: Think about this place as a gym. The first time you enter there are so many machines and exercises that you feel overwhelmed, but soon you’ll come to realize it’s become second nature to you.", "-- END OF INTRO ---", "--- LESSON NUMBER ---", "What lesson are you going to take today?"])

[node name="NamePanel" type="Panel" parent="DialogBox"]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 129.0
offset_top = -197.0
offset_right = -1132.0
offset_bottom = -147.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameLabel" type="Label" parent="DialogBox/NamePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Vesper"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = 273.0
offset_right = 365.0
offset_bottom = 470.0
theme_override_constants/separation = 30

[node name="Intro" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Intro"

[node name="Lesson1" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
disabled = true
text = "Lesson 1"

[node name="Lesson2" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
disabled = true
text = "Lesson 2"

[node name="Lesson3" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
disabled = true
text = "Lesson 3"

[connection signal="pressed" from="VBoxContainer/Intro" to="." method="_on_intro_pressed"]
